Fixed positioning and z-index issues

--- a/css/oiibadge.css
+++ b/css/oiibadge.css
@@ -14,7 +14,6 @@
 }
 
 .icon {
-    position: absolute;
     top:0px;
     left:0px;
     margin: 0 5px 0 0;
@@ -34,9 +33,16 @@
 }
 
 .teaser {
-    position: absolute;
     height: 100%;
     width: 100%;
-    display: none;
+    position:relative;
+    opacity:0;
+    display:none;
+    z-index:0;
+}
+
+.teaser.opened {
+    opacity:1;
     z-index:1;
+    display:inline-block;
 }
